tests/fixtures/errors/generic_body_member.z
# A type parameter provides no members; template method bodies are checked
# once against the canonical param tids.
Holder9: class {
    val: t
    poke: function {:this} out t is {
        x9: this.val.bogus9
        return this.val.copy
    }
} as {
    t: Any.generic
}

main: function is {
    h9: (Holder9 val: 1)
    print "\{h9.poke}"
}
